# recipes-llm

./: .env.example  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  SOLUTIONS.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
app/: database.py  ingredient_preferences_crud.py  main.py  models.py  pydantic_schema.py
app/api/: endpoints.py  endpoints_admin.py  endpoints_ingredients.py  endpoints_recipes.py
app/crud/: __init__.py  ingredient_preferences_crud.py
app/database/: database.py
app/models/: models_ingredients.py
app/schemas/: schema_ingredients.py  schema_recipes.py
app/utils/: exceptions.py  llm.py  llm_prompts.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  conftest.py  test_crud.py  test_endpoints.py  test_functions.py  test_recipes_endpoints.py
