[project]
name = "recipes"
version = "0.1.0"
description = "Recipes let's you create delicious recipes based on user's preferences. Yummy!"
readme = "README.md"
authors = [
  {name = "Marti Manzano", email = "marti.manzano@outlook.com"}
]
maintainers = [
  {name = "Marti Manzano", email = "marti.manzano@outlook.com"}
]

license = {text = "MIT license"}
dependencies = [
  'fastapi[standard]==0.115.8',
  'SQLAlchemy==2.0.38',
  'psycopg2-binary==2.9.10',
  'openai==1.64.0',
  'backoff==2.2.1',
  'pydantic==2.10.6'
]

[project.optional-dependencies]
dev = [
    "pytest",  # testing
]

[project.urls]

bugs = "https://github.com/marti.manzano/recipes-llm/issues"
changelog = "https://github.com/marti.manzano/recipes-llm/blob/master/changelog.md"
homepage = "https://github.com/marti.manzano/recipes-llm"